--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "description": "movie app.",
   "scripts": {
     "start": "lite-server",
-    "deploy" : "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Prabin Gurung",
-  "homepage" : "https://Soltee.github.io/vanilla-js-movie-app",
+  "homepage": "https://Soltee.github.io/vanilla-js-movie-app",
   "devDependencies": {
     "lite-server": "^2.4.0"
   },
   "dependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "hoek": "^6.1.3",
+    "package-lock.json": "^1.0.0"
   }
 }
